--- a/static/bootstrap/custom/quest/_header-footer.scss
+++ b/static/bootstrap/custom/quest/_header-footer.scss
@@ -349,7 +349,7 @@ i.menu-indicator {
 		border-top: 3px solid $top-user-dropdown-border-color !important;
 		color: $top-user-dropdown-color;
 		padding: 10px 3px 5px;
-		box-shadow: 0 4px 5px 0 rgba(97, 95, 95, 0.49);
+		@include box-shadow(0 4px 5px 0 rgba(97, 95, 95, 0.49));
 		h5 {
 			margin: 10px 0;
 			a {
