--- a/static/bootstrap/custom/_image.scss
+++ b/static/bootstrap/custom/_image.scss
@@ -55,11 +55,12 @@
   line-height: 30px;
   font-weight: 700;
   position: absolute;
-	top: 0;
+  top: 75%;
   width: 100%;
 	z-index: 2;
+  opacity: 0.92;
 	+ img {
-		position: absolute;
+    position: relative;
 		bottom: 0;
 	}
 }
@@ -123,4 +124,20 @@ a:hover {
       height: 194px;
     }
   }
+}
+
+.casestudy {
+  background-color: #003876;
+}
+
+.ondemand {
+  background-color: #C44E26;
+}
+
+.online-event {
+  background-color: #3E831C;
+}
+
+.in-person {
+  background-color: #C44E26;
 }
