Fixed the top search issue on non-responsive pages Test URL : http://www-quest-com/landing/6503/ Open search box and it must be full width
Applied drop-down arrow switching on DSG too
Test URL : http://software-dell-com/solutions/backup-and-recovery/

Made top user sign up full width on mobile
To test : http://www-quest-com/    change view mode to mobile, the user sign up box must be full width

Update button color (Blue and Green) on non responsive pages

Change-Id: I403aa67da4ad47a28e16a9b816d29325974509e6

--- a/static/bootstrap/custom/_custom-affix-scroll-nav-top.scss
+++ b/static/bootstrap/custom/_custom-affix-scroll-nav-top.scss
@@ -43,6 +43,7 @@
 				color: $affix-li-active-text-color;
         a {
           padding: 6px 5px 10px;
+					border-left: 1px solid #ccc;
         }
       }
       a {
