--- a/static/bootstrap/custom/_dropdowns.scss
+++ b/static/bootstrap/custom/_dropdowns.scss
@@ -289,14 +289,13 @@
   }
 }
 
-//Only on Quest - Changing dropdown arrows to down and up accordingly
-@if ($domain == "quest") {
-	.open {
-		.dropdown-toggle {
-			.caret {
-				border-bottom: 6px solid;
-				border-top: none;
-			}
+//On Quest and DSG - Changing dropdown arrows to down and up accordingly
+
+.open {
+	.dropdown-toggle {
+		.caret {
+			border-bottom: 6px solid;
+			border-top: none;
 		}
 	}
 }
