Revert "Labels Overlay for events and docs on widget and added new images for events."
This reverts commit 3ff0f697b5ef9f73c72f596e074b89de12ca6f4b.

Change-Id: I46f3baf80b60989293a589c69720ff4cf71d1550

--- a/static/bootstrap/custom/_image.scss
+++ b/static/bootstrap/custom/_image.scss
@@ -55,12 +55,11 @@
   line-height: 30px;
   font-weight: 700;
   position: absolute;
-	top: 75%;
+	top: 0;
   width: 100%;
 	z-index: 2;
-	@include opacity(0.92);
 	+ img {
-		position: relative;
+		position: absolute;
 		bottom: 0;
 	}
 }
@@ -124,21 +123,4 @@ a:hover {
       height: 194px;
     }
   }
-}
-
-.casestudy {
-	background-color: #003876;
-	@include opacity(0.90);
-}
-
-.ondemand {
-	background-color: #C44E26;
-}
-
-.online-event {
-	background-color: #3E831C;
-}
-
-.in-person {
-	background-color: #C44E26;
 }
