--- a/static/bootstrap/custom/_variables.scss
+++ b/static/bootstrap/custom/_variables.scss
@@ -926,6 +926,10 @@ $event-online-header-bg: $dell-green;
 $event-detail-signed-off-border-color: #cbcbcb;
 $event-container-off-canvas-bg-color: $white;
 
+/*Documents*/
+$doc-casestudy: $dell-blue;
+$doc-header-bg: $dell-blue;
+
 //Date
 $date-widget-border-color: #d9d9d9;
 $date-widget-header-color: $white;
@@ -1085,3 +1089,5 @@ $slick-770-caption-hover-color: #007db8;
 
 /*3 Play Media*/
 $play-3-media-border-color: $dell-gray;
+
+
