Fixed extra border for first child on Zombie nav
Change-Id: Id3013f88ff32baf63b3326c4d80bf4a78218c639

--- a/static/bootstrap/custom/_custom-affix-scroll-nav-top.scss
+++ b/static/bootstrap/custom/_custom-affix-scroll-nav-top.scss
@@ -45,7 +45,7 @@
           padding: 6px 5px 10px;
 					border-left: 1px solid #ccc;
         }
-				&:first-child {
+				&:first-child a {
 					border-left: none;
 				}
       }
