--- a/static/styles/bootstrap/_partial-reg.scss
+++ b/static/styles/bootstrap/_partial-reg.scss
@@ -1,8 +1,8 @@
-#content-container {
+/*#content-container {
 	h1, #right-form-partialreg {
 		display: none;
 	}
-}
+}*/
 
 .bootstrap {
 	&.custom-form {
