updated listing script.
Change-Id: I10f3b44508541f6831970023c0ab9a94a1c90105

--- a/static/bootstrap/custom/_image.scss
+++ b/static/bootstrap/custom/_image.scss
@@ -146,6 +146,6 @@ a:hover {
 	background-color: $event-in-person-header-bg;
 }
 
-.whitepaper, .ebook, .inforgraph, .datasheet, .techbrief {
+.whitepaper, .ebook, .infograph, .datasheet, .techbrief {
 	background-color: $doc-header-bg;
 }
