Made partial for non-responsive style sheets
Change-Id: I2a4fe85514bd133a90d9886dc0b952a273ad5468

--- a/static/styles/collective-quest.scss
+++ b/static/styles/collective-quest.scss
@@ -1,3 +1,5 @@
+@charset "utf-8";
+
 @import "../bootstrap/custom/_variables-quest";
 @import "collective/collective";
 @import "collective/widgets";
