--- a/static/styles/collective/_collective.scss
+++ b/static/styles/collective/_collective.scss
@@ -190,55 +190,55 @@ body .ui-tooltip {
 }
 
 .ui-widget-content {
-	border: 1px solid #dadada;
+	border: 1px solid $ui-widget-content-border;
 	background: #fff url(/images/shared/jqueryui/ui-bg_flat_75_ffffff_40x100.png) 50% 50% repeat-x;
-	color: #222;
+	color: $ui-widget-content-color;
 }
 
 .ui-widget-header {
-	border: 1px solid #dadada;
+	border: 1px solid $ui-widget-header-border;
 	background: #ccc url(/images/shared/jqueryui/ui-bg_flat_100_cccccc_40x100.png) 50% 50% repeat-x;
-	color: #222;
+	color: $ui-widget-header-color;
 	font-weight: bold;
 }
 
 .ui-widget-header a {
-	color: #222;
+	color: $ui-widget-header-link;
 }
 
 .ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default {
-	border: 1px solid #d3d3d3;
+	border: 1px solid $ui-state-border;
 	background: #e6e6e6 url(/images/shared/jqueryui/ui-bg_glass_75_e6e6e6_1x400.png) 50% 50% repeat-x;
 	font-weight: normal;
-	color: #555;
+	color: $ui-state-color;
 }
 
 .ui-state-default a, .ui-state-default a:link, .ui-state-default a:visited {
-	color: #555;
+	color: $ui-state-link;
 	text-decoration: none;
 }
 
 .ui-state-hover, .ui-widget-content .ui-state-hover, .ui-widget-header .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus, .ui-widget-header .ui-state-focus {
-	border: 1px solid #999;
+	border: 1px solid $ui-state-hover-border;
 	background: #dadada url(/images/shared/jqueryui/ui-bg_glass_75_dadada_1x400.png) 50% 50% repeat-x;
 	font-weight: normal;
-	color: #212121;
+	color: $ui-state-hover-color;
 }
 
 .ui-state-hover a, .ui-state-hover a:hover, .ui-state-hover a:link, .ui-state-hover a:visited {
-	color: #212121;
+	color: $ui-state-hover-link;
 	text-decoration: none;
 }
 
 .ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active {
-	border: 1px solid #aaa;
+	border: 1px solid $ui-state-active-border;
 	background: #fff url(/images/shared/jqueryui/ui-bg_glass_65_ffffff_1x400.png) 50% 50% repeat-x;
 	font-weight: normal;
-	color: #212121;
+	color: $ui-state-active-color;
 }
 
 .ui-state-active a, .ui-state-active a:link, .ui-state-active a:visited {
-	color: #212121;
+	color: $ui-state-active-link;
 	text-decoration: none;
 }
 
