Made partial for non-responsive style sheets
Change-Id: I2a4fe85514bd133a90d9886dc0b952a273ad5468

--- a/static/bootstrap/custom/_variables-quest.scss
+++ b/static/bootstrap/custom/_variables-quest.scss
@@ -1025,6 +1025,26 @@ $date-widget-border-color: #d9d9d9;
 $date-widget-header-color: $white;
 $date-body-bg-color: $white;
 
+//UI Widget
+$ui-widget-content-color: #222;
+$ui-widget-content-border: #dadada;
+$ui-widget-header-color: #222;
+$ui-widget-header-border: #dadada;
+$ui-widget-header-link: #222;
+
+//UI State
+$ui-state-border: #d3d3d3;
+$ui-state-color: #555;
+$ui-state-link: #555;
+
+$ui-state-hover-color: #212121;
+$ui-state-hover-border: #999;
+$ui-state-hover-link: #212121;
+
+$ui-state-active-color: #212121;
+$ui-state-active-border: #fff;
+$ui-state-active-link: #212121;
+
 // Introduction
 
 $grey-box-bg-color: $light-gray;
