fixed ie9 issue.
Change-Id: I2b3b8009063357e9473496ddfd1c8935d49d0651

--- a/static/css/bootstrap.scss
+++ b/static/css/bootstrap.scss
@@ -28,14 +28,14 @@
 @import "../bootstrap/partials/navbar";
 @import "../bootstrap/custom/breadcrumbs";
 @import "../bootstrap/partials/pagination";
-@import "../bootstrap/partials/pager";
+/*@import "../bootstrap/partials/pager";*/
 @import "../bootstrap/partials/labels";
 @import "../bootstrap/partials/badges";
 /*@import "bootstrap/jumbotron";*/
-@import "../bootstrap/partials/thumbnails";
+/*@import "../bootstrap/partials/thumbnails";*/
 @import "../bootstrap/custom/alerts";
 /*@import "bootstrap/progress-bars";*/
-@import "../bootstrap/partials/media";
+/*@import "../bootstrap/partials/media";*/
 @import "../bootstrap/partials/list-group";
 @import "../bootstrap/partials/responsive-embed";
 /*@import "bootstrap/wells";*/
