--- a/static/bootstrap/custom/_type.scss
+++ b/static/bootstrap/custom/_type.scss
@@ -31,7 +31,7 @@ h1, .h1, h2, .h2, h3, .h3 {
 }
 
 h4, .h4, h5, .h5, h6, .h6 {
-  font-family: $headings2-font-family;
+	font-family: $headings-font-family;
   margin-top: ($line-height-computed / 2);
   margin-bottom: ($line-height-computed / 2);
 
