--- a/static/css/bootstrap-quest.scss
+++ b/static/css/bootstrap-quest.scss
@@ -71,6 +71,8 @@
 @import "../bootstrap/widgets/banner";
 @import "../bootstrap/widgets/comparison";
 @import "../bootstrap/widgets/slick";
+@import "../bootstrap/widgets/mosaic";
+
 @import "../bootstrap/custom/collapsed";
 @import "../bootstrap/custom/3playmedia";
 // Components w/ JavaScript
