--- a/static/css/bootstrap.scss
+++ b/static/css/bootstrap.scss
@@ -76,6 +76,7 @@
 @import "../bootstrap/widgets/banner";
 @import "../bootstrap/widgets/comparison";
 @import "../bootstrap/widgets/slick";
+@import "../bootstrap/widgets/mosaic";
 
 @import "../bootstrap/custom/collapsed";
 @import "../bootstrap/custom/3playmedia";
