--- a/static/bootstrap/custom/quest/_custom-header-footer-sm-quest.scss
+++ b/static/bootstrap/custom/quest/_custom-header-footer-sm-quest.scss
@@ -305,6 +305,7 @@
 				padding: 0 15px 20px;
 				color: $footer-link-color;
 				border-bottom: 1px solid #eee;
+				width: 1200px;
 				li {
 					border-bottom: 0;
 
@@ -314,7 +315,7 @@
 				}
 				> li {
 					/*width: 20%;*/
-					padding-right: 6%;
+					padding-right: 9%;
 					display: inline-block;
 					vertical-align: top;
 					float: left;
